--- a/style4.css
+++ b/style4.css
@@ -1,9 +1,30 @@
 h1, p{
     text-align: center;
     animation: both;
+    background: #5FBFF9
 }
 
 main hr {
     height: 2px;
-    background-color: black;
+    border: 2px solid black;
+    font-weight: bold;
+}
+.contenedor {
+    font-family: 'Roboto';
+    background: #16BAC5;
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+}
+input{
+    border: 2px solid black;
+    font-weight: bold;
+
+}
+body{
+    font-weight: bold;
+    
+}
+section{
+    font-weight: bold;
 }
