--- a/Css/Styles3.css
+++ b/Css/Styles3.css
@@ -1,95 +1,111 @@
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #171D1C; /* Negro espeluznante */
-    color: #EFE9F4; /* Magnolia */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Asegura que el cuerpo del documento ocupe toda la pantalla */
-}
-
-.login-container {
-    width: 100%; /* Ocupa el ancho completo en dispositivos pequeños */
-    max-width: 360px; /* Máximo ancho del contenedor para que no se vea muy grande en pantallas amplias */
-    padding: 20px;
-    background-color: #5863F8; /* Azul Neón */
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.login-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Alinea verticalmente los elementos del formulario */
-}
-
-.login-title {
-    color: #EFE9F4; /* Magnolia */
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.label {
-    width: 100%; /* Asegura que la etiqueta ocupe el ancho completo */
-    color: #EFE9F4; /* Magnolia */
-    margin-bottom: 5px;
-}
-
-.input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #2D3748; /* Gris oscuro para inputs */
-    color: #EFE9F4; /* Texto claro */
-}
-
-.btn {
-    width: 100%;
-    padding: 10px;
-    background-color: #5FBFF9; /* Azul Maya */
-    color: #EFE9F4; /* Texto claro */
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    text-transform: uppercase;
-}
-
-.btn:hover {
-    background-color: #5058E5; /* Azul Neón más oscuro */
-}
-
-.extra-links {
-    text-align: center;
-    width: 100%;
-    margin-top: 20px;
-}
-
-.link {
-    color: #EFE9F4; /* Magnolia */
-    text-decoration: none;
-    display: block;
-    margin-top: 10px;
-}
-
-.link:hover {
-    text-decoration: underline;
-}
-textarea {
-    /* border: rgb(160, 157, 157) 1px solid; */
-    background-color: rgb(255, 255, 255);
+    body {
+        font-family: 'Arial', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #171D1C;
+        /* Negro espeluznante */
+        color: #EFE9F4;
+        /* Magnolia */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        /* Asegura que el cuerpo del documento ocupe toda la pantalla */
+    }
     
-}
-
-@media (max-width: 600px) {
     .login-container {
-        padding: 15px;
+        width: 100%;
+        /* Ocupa el ancho completo en dispositivos pequeños */
+        max-width: 360px;
+        /* Máximo ancho del contenedor para que no se vea muy grande en pantallas amplias */
+        padding: 20px;
+        background-color: #5863F8;
+        /* Azul Neón */
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
-
-    .input, .btn {
-        padding: 8px;
+    
+    .login-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* Alinea verticalmente los elementos del formulario */
     }
-}
+    
+    .login-title {
+        color: #EFE9F4;
+        /* Magnolia */
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    
+    .label {
+        width: 100%;
+        /* Asegura que la etiqueta ocupe el ancho completo */
+        color: #EFE9F4;
+        /* Magnolia */
+        margin-bottom: 5px;
+    }
+    
+    .input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 20px;
+        border: none;
+        border-radius: 4px;
+        background-color: #2D3748;
+        /* Gris oscuro para inputs */
+        color: #EFE9F4;
+        /* Texto claro */
+    }
+    
+    .btn {
+        width: 100%;
+        padding: 10px;
+        background-color: #5FBFF9;
+        /* Azul Maya */
+        color: #EFE9F4;
+        /* Texto claro */
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        text-transform: uppercase;
+    }
+    
+    .btn:hover {
+        background-color: #5058E5;
+        /* Azul Neón más oscuro */
+    }
+    
+    .extra-links {
+        text-align: center;
+        width: 100%;
+        margin-top: 20px;
+    }
+    
+    .link {
+        color: #EFE9F4;
+        /* Magnolia */
+        text-decoration: none;
+        display: block;
+        margin-top: 10px;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    textarea {
+        /* border: rgb(160, 157, 157) 1px solid; */
+        background-color: rgb(255, 255, 255);
+    }
+    
+    @media (max-width: 600px) {
+        .login-container {
+            padding: 15px;
+        }
+        .input,
+        .btn {
+            padding: 8px;
+        }
+    }
