--- a/Css/style4.css
+++ b/Css/style4.css
@@ -1,9 +1,6 @@
 body {
     font-weight: bold;
-    background-image: url(https://th.bing.com/th/id/OIP.yM0uUOfYI5AuZ9pmVPjgzAHaE7?w=306&h=204&c=7&r=0&o=5&dpr=1.1&pid=1.7);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-color: #052449;
 }   
 h1 {
     text-align: center;
@@ -20,7 +17,7 @@ p {
 
 main hr {
     height: 2px;
-    border: 2px solid black;
+    border: 2px solid rgb(9, 9, 9);
     font-weight: bold;
 
 }
@@ -62,17 +59,32 @@ main hr {
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
     width: 80%;
     margin: 0 auto;
     text-align: center;
     
+    
+}
+.contenedor4{
+        font-family: 'Roboto';
+        background: #5FBFF9;
+        border: 2px solid black;
+        padding-left: 40px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
 }
 
 input {
     padding: 2px;
-    border: 2px solid black;
+    border: 2px solid rgb(8, 8, 8);
     font-weight: bold;
     display: flex;
     justify-content: baseline;
@@ -111,7 +123,7 @@ img{
 .mes{
     background: #5FBFF9;
     border: 10px;
-    border: 2px solid black;
+    border: 2px solid rgb(251, 250, 250);
     
     
 }
@@ -119,26 +131,27 @@ img{
     display: flex;
     flex-direction: row;
     justify-content: space-around; /* Distribución de espacio uniforme */
+    flex-grow: 2px;
     align-items: center;
-    border: 10px rgb(2, 2, 2);
+    border: 10px rgb(253, 252, 252);
   }
   
   .item {
     background-color: #cccccc;
     padding: 10px;
     margin: 5px;
-    border: 3px black;
+    border: 3px rgb(252, 252, 252);
   }
   .boton {
     background: #5FBFF9;
     display: flex;
     flex-direction: row;
-    justify-content: space-around; /* Distribución de espacio uniforme */
+    justify-content: center; /* Distribución de espacio uniforme */
     align-items: center;
     background-color:#5FBFF9;
     padding: 10px;
     margin: 20px;
-    border: 1px solid black;
+    border: 1px solid rgb(253, 251, 251);
     box-shadow: #2551b1;
   }
   div h2{
