--- a/Css/Style5.css
+++ b/Css/Style5.css
@@ -1,16 +1,22 @@
 body {
     font-weight: bold;
-    background-color: #052449;
+    background-color: #1E3A5F;
 }   
 h1 {
     text-align: center;
-    background: #5FBFF9;
+    background: #7FB3D5;
     font-weight: bold;
     font-size: 30px;
 }
+header div h2{
+    color: white;
+    margin: 2px white;
+    font-size: 20px;
+    border-color: white;
+  }
 p {
     text-align: center;
-    background: #5FBFF9;
+    background: #AED6F1;
     padding-right: 40px;
     padding-left: 40px;
 }
@@ -23,63 +29,68 @@ main hr {
 }
 .contenedor{
     font-family: 'Roboto';
-    background: #5FBFF9;
-    border: 2px solid rgb(254, 254, 254);
-    padding-left: 40px;
+    background: #7FB3D5;
+    border: 2px solid #D4E6F1;
+    padding-left: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     width: 50%;
-    margin: auto;
+    margin: 0 auto;
     text-align: center;
-}
-
-.contenedor2 {
-    font-family: 'Roboto';
-    background: #5FBFF9;
-    border: 2px solid rgb(253, 251, 251);
-    padding-left: 40px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80%;
-    margin: auto;
-    text-align: center;
+    gap: 10px;
 }
 
 .contenedor3 {
     font-family: 'Roboto';
-    background: #5FBFF9;
+    background: #7FB3D5;
     border: 2px solid rgb(255, 253, 253);
-    padding-left: 40px;
+    padding-left: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
+    padding-right: 10px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
-    width: 80%;
+    width: 50%;
     margin: 0 auto;
     text-align: center;
+    gap: 10px;
     
     
 }
 .contenedor4{
         font-family: 'Roboto';
-        background: #5FBFF9;
-        border: 2px solid rgb(254, 252, 252);
-        padding-left: 40px;
+        background: #7FB3D5;
+        border: 2px solid rgb(255, 253, 253);
+        padding-left: 30px;
         padding-top: 20px;
-        padding-bottom: 20px;
+        padding-bottom: 30px;
+        padding-right: 30px;
         display: flex;
         flex-wrap: nowrap;
         justify-content: center;
-        width: 80%;
+        width: 50%;
         margin: 0 auto;
         text-align: center;
+        gap: 10px;
+}
+.contenedor2 {
+    font-family: 'Roboto';
+    background: #7FB3D5;
+    border: 2px solid rgb(253, 251, 251);
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    gap: 10px;
 }
 
 input {
@@ -91,6 +102,7 @@ input {
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 3;
+    
 }
 
 
@@ -121,7 +133,7 @@ img{
     justify-content: center;
 }
 .mes{
-    background: #5FBFF9;
+    background: #7FB3D5;
     border: 10px;
     border: 2px solid black;
     
@@ -143,20 +155,26 @@ img{
     border: 3px black;
   }
   .boton {
-    background: #5FBFF9;
+    font-family: 'Roboto';
+    background: #7FB3D5;
+    border: 2px solid rgb(254, 254, 254);
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 50%;
+    margin:  auto;
+    text-align: center;
+    /* background: #5FBFF9;
     display: flex;
     flex-direction: row;
-    justify-content: space-around; /* Distribución de espacio uniforme */
-    align-items: center;
+    justify-content: center; /* Distribución de espacio uniforme */
+    /* align-items: center;
     background-color:#5FBFF9;
     padding: 10px;
-    margin: 20px;
+    margin: 10px;
     border: 1px solid black;
-    box-shadow: #2551b1;
-  }
-  div h2{
-    color: white;
-    margin: 2px white;
-    font-size: 20px;
-    border-color: white;
-  }
+    box-shadow: #2551b1; */
+  } 
