Se crea el encarpetado MVC, y se modificn los nombres de los archivos html de persona natural, jurídica;

--- a/views/natural.html
+++ b/views/natural.html
@@ -108,7 +108,7 @@
                                         class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-white-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                                 </div>
 
-                                <a href="principal.html" target="_blank">
+                                <a href="../vistaPersonaNatural.html" target="_blank">
                                     <button type="button"
                                         class="flex font-semibold items-center justify-between w-full px-6 py-3 text-sm tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-lg hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50">
                                         <span>Ingresar</span>
