--- a/views/Quienes-somos.html
+++ b/views/Quienes-somos.html
@@ -16,7 +16,7 @@
         <div class="bg-gray-900">
             <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
                 <div class="relative flex items-center justify-between">
-                    <a href="index.html" aria-label="Company" title="Company"
+                    <a href="../index.html" aria-label="Company" title="Company"
                         class="inline-flex items-center">
                         <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round"
