se areglo una imagen de registro de persona natural y sus enlaces a index

--- a/views/juridica.html
+++ b/views/juridica.html
@@ -7,18 +7,15 @@
     <title>Persona Jurídica</title>
     <link rel="shortcut icon" href="/AdministraPlus/imagenes/icono.ico">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
     <header class="bg-white dark:bg-gray-900">
 
         <div class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8">
-            <a class="block text-teal-600" href="#">
+            <a class="block text-teal-600" href="../index.html">
                 <span class="sr-only">Home</span>
-                <a href="/AdministraPlus/index.html">
+                <a href="../index.html">
                     <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                         stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         class="w-10 h-10 text-white p-2 bg-blue-600 rounded-full" viewBox="0 0 24 24">
@@ -34,7 +31,7 @@
                             </a>
 
                             <a class="hidden rounded-md bg-blue-400 px-5 py-2.5 text-sm font-medium text-white transition hover:text-teal-600/75 sm:block"
-                                href="index.html">
+                                href="../index.html">
                                 Inicio
                             </a>
                         </div>
@@ -48,7 +45,7 @@
         <section class="bg-white dark:bg-white-900">
             <div class="flex justify-center min-h-screen">
                 <div class="hidden bg-cover lg:block lg:w-2/5"
-                    style="background-image: url(https://expertscolumn.com/image_files/thumbmain/imag_61370702_1680896644.jpg)"
+                    style="background-image: url(https://www.valoraanalitik.com/wp-content/uploads/2024/03/Tecnologia-empresa-1068x623.jpg)"
                     alt="Hombre en untraje elegante">
                 </div>
 
