--- a/views/natural.html
+++ b/views/natural.html
@@ -17,7 +17,7 @@
     <header class="bg-white dark:bg-gray-900">
 
         <div class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8">
-            <a class="block text-teal-600" href="/AdministraPlus/index.html">
+            <a class="block text-teal-600" href="../index.html">
                 <span class="sr-only">Home</span>
                 <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                     stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -34,7 +34,7 @@
                         </a>
 
                         <a class="hidden rounded-md bg-blue-400 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-blue-800 sm:block"
-                            href="index.html">
+                            href="../index.html">
                             Inicio
                         </a>
                     </div>
